--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               
             <div class="col-md-7 mx-auto text-center">
               <h1 class="heading gsap-reveal-hero">Akshat Shirsat</h1>
-              <h2 class="subheading gsap-reveal-hero">I’m a Cybersecurity enthusiast with a passion for Read Teaming, Based In India</h2>
+              <h2 class="subheading gsap-reveal-hero">Cybersecurity enthusiast passionate about Red Teaming, finding vulnerabilities and strengthening security systems.</h2>
             </div>
 
           </div>
@@ -161,14 +161,14 @@
             </div>
             <div class="col-lg-4 pr-lg-5">
               <h3 class="mb-4 heading-h3"><span class="gsap-reveal">We can make it together</span></h3>
-              <p class="lead gsap-reveal">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there <a href="#">live the blind</a> texts. </p>
-              <p class="mb-4 gsap-reveal">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+              <p class="lead gsap-reveal">I’m Akshat Shirsat, a passionate cybersecurity enthusiast with a strong focus on Red Teaming and offensive security. I enjoy simulating real-world cyberattacks to uncover vulnerabilities before malicious actors can exploit them. My journey in cybersecurity is driven by curiosity, a love for problem-solving, and the constant challenge of staying ahead in an ever-evolving threat landscape.</p>
+              <p class="mb-4 gsap-reveal">With a solid foundation in ethical hacking, penetration testing, and security research, I aim to contribute to creating safer digital environments. Whether it’s testing network defenses, dissecting vulnerabilities, or exploring new attack vectors, I believe every challenge is an opportunity to learn and grow.</p>
               <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">Download my CV</a></p>
             </div>
           </div>
         </div>
       </div>
-<!-- 
+
       <div class="unslate_co--section" id="services-section">
         <div class="container">
 
@@ -236,7 +236,7 @@
 
           </div>
         </div>
-      </div> -->
+      </div>
 
 
 
