--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ethan Cole - Developer Portfolio</title>
-    <link rel="icon" href="https://www.codewithfaraz.com/tools/placeholder?size=32x32&bgColor=0d1117&textColor=c9d1d9&text=EC" type="image/png">
+    <title>Akshat</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -23,7 +22,7 @@
     <!-- Header -->
     <header class="fixed top-0 left-0 right-0 z-50 bg-opacity-50 backdrop-blur-md border-b border-gray-800">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-white"><< EC /></a>
+            <a href="#" class="text-2xl font-bold text-white"><< AS /></a>
             <div class="hidden md:flex space-x-8">
                 <a href="#about" class="hover:text-accent transition-colors">/about</a>
                 <a href="#portfolio" class="hover:text-accent transition-colors">/portfolio</a>
@@ -67,7 +66,7 @@
 
             <!-- Terminal Content -->
             <div class="p-4 font-mono text-green-400 text-sm leading-relaxed">
-                <p>$ Hello, I am <span class="text-accent">Ethan Cole</span></p>
+                <p>$ Hello, I am <span class="text-accent">Akshat Shirsat</span></p>
                 <p>$ I am a <span id="typewriter"></span><span class="typewriter-cursor">|</span></p>
                 <p>$ View my work 👇</p>
             </div>
@@ -95,35 +94,33 @@
                             <span class="h-3 w-3 bg-yellow-500 rounded-full mr-2"></span>
                             <span class="h-3 w-3 bg-green-500 rounded-full"></span>
                         </div>
-                        <p class="text-secondary mb-4">> ethan_cole@portfolio:~$ cat ./bio.txt</p>
+                        <p class="text-secondary mb-4">> akshat_s@portfolio:~$ cat ./bio.txt</p>
                         <p class="text-primary leading-relaxed">
-                            Hello! I'm Ethan, a passionate software engineer with a knack for creating elegant and
-                            efficient solutions. With over 5 years of experience in the tech industry, I've had the
-                            privilege of working on a diverse range of projects, from scalable web applications to
-                            complex backend systems. My journey in coding started with a simple "Hello, World!" and has
-                            since evolved into a deep love for building things that make a difference.
+                            I’m Akshat Shirsat, a passionate Cybersecurity Analyst with a knack for building automation to make security smarter (and faster)
+                            My journey has taken me from working with data to digging deep into cloud, and more—basically, if it involves securing systems or scripting out repetitive tasks, I’m in.
+                            I enjoy solving CTF's, and experimenting with ways to make systems more resilient. For me, cybersecurity is not just a job but a constant puzzle where curiosity meets defense.
                         </p>
                         <p class="text-secondary mt-4">> <span class="blinking-cursor">_</span></p>
                     </div>
-                    <div class="mt-8">
+                    <!-- <div class="mt-8">
                         <h3 class="text-2xl font-semibold mb-4">My Skills</h3>
                         <div class="space-y-4">
                             <div class="skill">
-                                <p class="flex justify-between mb-1"><span>JavaScript</span><span>90%</span></p>
+                                <p class="flex justify-between mb-1"><span>Cyber Security</span><span>90%</span></p>
                                 <div class="w-full bg-gray-700 rounded-full h-2.5">
                                     <div class="bg-accent h-2.5 rounded-full skill-bar-inner" style="width: 0%"
                                         data-width="90%"></div>
                                 </div>
                             </div>
                             <div class="skill">
-                                <p class="flex justify-between mb-1"><span>React</span><span>85%</span></p>
+                                <p class="flex justify-between mb-1"><span>Data Analyst</span><span>85%</span></p>
                                 <div class="w-full bg-gray-700 rounded-full h-2.5">
                                     <div class="bg-accent h-2.5 rounded-full skill-bar-inner" style="width: 0%"
                                         data-width="85%"></div>
                                 </div>
                             </div>
                             <div class="skill">
-                                <p class="flex justify-between mb-1"><span>Node.js</span><span>80%</span></p>
+                                <p class="flex justify-between mb-1"><span>Web Develo</span><span>80%</span></p>
                                 <div class="w-full bg-gray-700 rounded-full h-2.5">
                                     <div class="bg-accent h-2.5 rounded-full skill-bar-inner" style="width: 0%"
                                         data-width="80%"></div>
@@ -137,7 +134,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -149,9 +146,8 @@
             <h2 class="text-3xl font-bold text-center mb-12"><span class="text-accent">02.</span> My Portfolio</h2>
             <div class="flex justify-center mb-8 space-x-2 md:space-x-4">
                 <button class="filter-btn" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="frontend">Frontend</button>
-                <button class="filter-btn" data-filter="backend">Backend</button>
-                <button class="filter-btn" data-filter="fullstack">Full Stack</button>
+                <button class="filter-btn" data-filter="backend">CTF Write Up's</button>
+                <button class="filter-btn" data-filter="fullstack">Project</button>
             </div>
             <div id="portfolio-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Project cards will be injected here by JS -->
