--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akshat</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/png" href="images/favicon-fsociety.png">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- highlight.js for syntax highlighting in modals -->
@@ -293,7 +294,8 @@
     </div>
 
     <!-- Footer -->
-    <footer class="py-6 text-center text-secondary border-t border-gray-800">
+    <footer class="sr-only" >
+        <!--class="py-6 text-center text-secondary border-t border-gray-800"-->
         <p>© 2025 Ethan Cole. Designed & Built with <3 by <a
                 href="https://www.codewithfaraz.com">CodewithFaraz</a></p>
     </footer>
