--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M6.94 8.5H3.56V20h3.38V8.5ZM5.25 3A2.25 2.25 0 1 0 5.25 7.5 2.25 2.25 0 0 0 5.25 3ZM20.44 13.48c0-3.16-1.69-5.18-4.47-5.18-2.06 0-2.98 1.13-3.5 1.92V8.5H9.1V20h3.38v-5.69c0-1.5.28-2.95 2.14-2.95 1.83 0 1.85 1.71 1.85 3.04V20h3.37l.01-6.52Z"></path></svg>
                             <span>LinkedIn</span>
                         </a>
-                        <a class="ht-cta-btn" href="https://github.com/kingakshat" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                        <a class="ht-cta-btn" href="https://github.com/0xHackshat" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
                             <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 .5a12 12 0 0 0-3.8 23.4c.6.1.82-.25.82-.57v-2.02c-3.34.73-4.04-1.42-4.04-1.42-.55-1.38-1.34-1.75-1.34-1.75-1.1-.75.08-.74.08-.74 1.2.09 1.84 1.24 1.84 1.24 1.08 1.85 2.83 1.31 3.52 1 .1-.79.42-1.31.76-1.62-2.66-.31-5.46-1.34-5.46-5.97 0-1.32.47-2.4 1.24-3.25-.12-.31-.54-1.57.12-3.27 0 0 1.01-.32 3.31 1.24a11.36 11.36 0 0 1 6.03 0c2.3-1.56 3.31-1.24 3.31-1.24.66 1.7.24 2.96.12 3.27.77.85 1.24 1.93 1.24 3.25 0 4.64-2.8 5.66-5.48 5.96.43.37.82 1.1.82 2.23v3.3c0 .32.22.69.83.57A12 12 0 0 0 12 .5Z"></path></svg>
                             <span>GitHub</span>
                         </a>
