updates css & js location

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- highlight.js for syntax highlighting in modals -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 
 </head>
 
@@ -279,7 +279,7 @@
         <p>© 2025 Ethan Cole. Designed & Built with <3 by <a
                 href="https://www.codewithfaraz.com">CodewithFaraz</a></p>
     </footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
